# ctypes-plus

./: .editorconfig  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/ctypes_plus/: __init__.py  _build.py  _decorators.py  _introspection.py  types.py
tests/: test_ctypes_plus.py
